resources/public/css/style.css
/* ... */
/* Tags */

.tags {
    display: flex;
    padding: 1rem;
    justify-content: center;
    flex-wrap: wrap;
    gap: 0.5rem;
}

.tag {
    font-size: 0.8rem;;
    padding: 0.3rem;
    background-color: var(--bg-primary-color);
    color: var(--text-primary-color);
    border-style: groove;
    border-width: 1px;
    border-color: var(--border-primary-color);
}

/* Vignettes */

.vignettes {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
}

.vignette {
    flex-basis: 40%;
    margin: 1rem;
    padding: 1rem;
    flex-grow: 1;
    text-align: justify;
    border-style: solid;
    border-width: 1px;
    border-color: var(--text-primary-color);

    --g: 1px;     /* the gap */
    --b: 2px;    /* border thickness*/
    --c: var(--text-primary-color); /* the color */
    
    --_c: var(--text-secondary-color) 0 25%, var(--c) 0 50%;
    --_g1: repeating-linear-gradient(90deg ,var(--_c)) repeat-x;
    --_g2: repeating-linear-gradient(180deg,var(--_c)) repeat-y;
    background:
        var(--_g1) var(--_p, 25%) 0   ,var(--_g2) 0    var(--_p,125%),
        var(--_g1) var(--_p,125%) 100%,var(--_g2) 100% var(--_p, 25%);
    background-size: 200% var(--b),var(--b) 200%;
    background-color: var(--bg-primary-color);
    transition: .3s;
}

.vignette:hover {
    --_p: 75%;
  }

@media (max-width: 1024px) {
    .vignette {
        margin: 0;
        text-align: left;
    }
}

.vignette .image {
    padding: 1rem;
}

.vignette a {
    text-decoration: none;
    display: inline-block;
}

.vignette h2 {
    text-decoration: none;
}

.vignette h2, .vignette h5 {
    text-align: center;
}

.post-body .links {
    padding: 0
}

.post-body .resources {
    padding-top: 0;
}

.links .link {
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.links img {
    margin: 0.1rem;
    width: 2rem;
}

.links a {
    padding: 0;
    display: block;
    text-align: left;
}

.vignette .links .img {
    flex-basis: 10%;
}

.post .links .img {
    flex-basis: 4%;
}

@media (max-width: 1024px) {
    .vignette .links .img {
        flex-basis: 15%;
    }

    .post .links .img {
        flex-basis: 15%;
    }
}

/* Page - all pages */

section .post .post-body {
    display: block;
}

section .post-body>div {
    padding: 1.5rem;
}

@media (max-width: 1024px) {
    section .post-body>div {
        padding: 0.5rem;
    }
}

section .post-body {
    width: 100%;
}

section .post-body .info {
    text-align: center;
}

section img {
    max-width: 10rem;
    text-align: center;
}

@media (max-width: 1024px) {
    section .post .post-body {
        padding: 0.5rem;
        display: block;
    }
}

.post-body:hover img {
    animation: var(--pulse-animation);
}

section button {
    margin: 0.5rem;
}

/* About Me page */

section .socials {
    text-align: center;
    display: block;
}

@media (min-width: 1024px) {
    section .social-icons {
        display: flex;
        justify-content: space-evenly;
    }

    section .social-icons>div {
        width: 30%;
    }
}

section .socials img {
    margin: 1rem;
    width: 3rem;
}

